--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^8.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
