--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.9.0",
     "eslint-config-react-app": "^7.0.0",
+    "leaflet": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^4.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
