--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^4.0.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "6",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "sass": "^1.49.0",
     "web-vitals": "^2.1.4"
   },
