--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.0",
     "react-redux": "^7.2.6",
     "react-router-hash-link": "^2.4.3",
