--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.5",
     "emailjs": "^4.0.0",
     "eslint": "^8.9.0",
     "eslint-config-react-app": "^7.0.0",
